style: fixed extra white space to the right

--- a/css/styles.css
+++ b/css/styles.css
@@ -236,7 +236,6 @@ nav h1 a {
   .restaurant-details-container {
     display: flex;
     flex-wrap: wrap;
-    max-width: 1300px;
   }
 } 
 
@@ -347,13 +346,6 @@ nav h1 a {
 }
 
 @media screen and (max-width: 600px) {
-  #restaurant-container, #reviews-container {
-    flex: 100%;
-    max-width: 100%;
-  }
-}
-
-@media screen and (max-width: 600px) {
   #restaurant-container {
     flex: 100%;
     max-width: 100%;
@@ -363,6 +355,13 @@ nav h1 a {
 
 #reviews-container {
   padding: 30px 40px 80px;
+}
+
+@media screen and (max-width: 600px) {
+  #reviews-container {
+    flex: 100%;
+    max-width: 100%;
+  }
 }
 
 @media screen and (max-width: 600px) {
